FIX SimpleFIN new account modal
Now new account properly loads as a Modal, instead of new page.
Fixes also form showing dashboard instead of settings page.

--- a/app/views/simplefin_items/edit.html.erb
+++ b/app/views/simplefin_items/edit.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title, "Update SimpleFin Connection" %>
 
-<%= render DS::Dialog.new do |dialog| %>
+<%= turbo_frame_tag "modal" do %>
+  <%= render DS::Dialog.new do |dialog| %>
   <% dialog.with_header(title: "Update SimpleFin Connection") do %>
     <div class="flex items-center gap-2">
       <%= icon "building-2", class: "text-primary" %>
@@ -58,5 +59,6 @@
         ) %>
       </div>
     <% end %>
+  <% end %>
   <% end %>
 <% end %>
