--- a/app/views/simplefin_items/index.html.erb
+++ b/app/views/simplefin_items/index.html.erb
@@ -11,7 +11,8 @@
       text: "Add Connection",
       icon: "plus",
       variant: "primary",
-      href: new_simplefin_item_path
+      href: new_simplefin_item_path,
+      frame: "modal"
     ) %>
   </div>
 
@@ -34,7 +35,8 @@
         <%= render DS::Link.new(
           text: "Add your first connection",
           variant: "primary",
-          href: new_simplefin_item_path
+          href: new_simplefin_item_path,
+          frame: "modal"
         ) %>
       </div>
     </div>
